# langchain101-genai-cracow-5

./: .env.template  .gitignore  README.md  docker-compose.yml  environment.yml  langchain-intro.ipynb  pyproject.toml
