[tool.poetry]
name = "langchain 101"
version = "0.1.0"
description = ""
authors = ["Konrad Bujak <contact@konradbujak.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.14"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
qdrant-client = "^1.9.2"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-core = "^0.2.9"
langchain-openai = "^0.1.8"
pymongo = "^4.7.3"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
playwright = "^1.44.0"
langchain-aws = "^0.1.6"
pypdf = "^4.3.1"
pdfminer-six = "^20240706"
pdf2image = "^1.17.0"
scipy = "^1.14.0"
pillow = "10.4.0"
layoutparser = "^0.3.4"
langchain-qdrant = "^0.1.2"
tavily-python = "^0.3.5"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
